# MGGPlanner

./: LICENSE  README.md  packages_https.rosinstall  packages_https_robot.rosinstall
docs/: index.html
gbplanner/launch/: bunker.launch  bunker2.launch  optimus.launch
gbplanner/src/: gbplanner.cpp  gbplanner_rviz.cpp  rrg.cpp
local_planner/: CMakeLists.txt
mggplanner/: CMakeLists.txt  package.xml
mggplanner/config/: filters_demo_filter_chain.yaml  waffle_robot.yaml  waffle_robot_grid_viz.yaml
mggplanner/config/rviz/: bunker.rviz  m100.rviz  m100_sim.rviz  m100_sim_new.rviz  rmf_obelix.rviz  robot_bag.rviz  smb.rviz  smbR1.rviz  smbR2.rviz  smbR3.rviz  smb_sim.rviz
mggplanner/config/smb/: mgg_simple.yaml  mggplanner_config.yaml  mggplanner_config_sim.yaml  planner_control_interface_sim_config.yaml  voxblox_sim_config.yaml
mggplanner/include/mggplanner/: mggplanner.h  mggplanner_rviz.h  rrg.h
mggplanner/launch/data_processing/: robot_bag.launch
mggplanner/launch/real_robot/: bunker.launch  bunker2.launch  optimus.launch
mggplanner/launch/rmf/: rmf_sim.launch
mggplanner/launch/smb/: 2smb_sim.launch  3smb_sim_mgg.launch  mgg_sim_darpa_cave.launch  mgg_sim_flat.launch  smb_gazebo.launch  smb_sim.launch  smb_sim_no_namespace.launch
mggplanner/launch/smb/gbplanner/: 3smb_sim.launch  3smb_sim_gb.launch
mggplanner/src/: mggplanner.cpp  mggplanner_ros_node.cpp  mggplanner_rviz.cpp  rrg.cpp
mggplanner_ros/: CMakeLists.txt  package.xml
mggplanner_ui/: CMakeLists.txt  package.xml  plugin_description.xml
planner_msgs/: CMakeLists.txt
(+87 files in other folders)
